Bug 161130 - [Fetch API] Opaque responses should not have any body
Summary: [Fetch API] Opaque responses should not have any body
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords:
Depends on:
Blocks: 151937
  Show dependency treegraph
 
Reported: 2016-08-24 01:05 PDT by youenn fablet
Modified: 2016-08-27 13:49 PDT (History)
8 users (show)

See Also:


Attachments
Patch (3.44 KB, patch)
2016-08-24 01:18 PDT, youenn fablet
buildbot: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from ews101 for mac-yosemite (883.08 KB, application/zip)
2016-08-24 02:08 PDT, Build Bot
no flags Details
Adding ThreadableLoader option (8.21 KB, patch)
2016-08-24 06:12 PDT, youenn fablet
no flags Details | Formatted Diff | Diff
Patch for landing (rebasing after 161194) (8.36 KB, patch)
2016-08-27 13:18 PDT, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2016-08-24 01:05:43 PDT
Fetch API currently leaks the body for Opaque responses.
Comment 1 youenn fablet 2016-08-24 01:18:46 PDT
Created attachment 286843 [details]
Patch
Comment 2 Build Bot 2016-08-24 02:08:27 PDT
Comment on attachment 286843 [details]
Patch

Attachment 286843 [details] did not pass mac-ews (mac):
Output: http://webkit-queues.webkit.org/results/1933019

New failing tests:
http/tests/workers/worker-importScripts.html
http/tests/security/contentSecurityPolicy/worker-without-csp-importScripts-redirect-cross-origin-allowed.html
http/tests/security/isolatedWorld/bypass-main-world-csp-worker-importScripts-redirect-cross-origin.html
http/tests/security/isolatedWorld/bypass-main-world-csp-worker-blob-importScript-redirect-cross-origin.html
http/tests/workers/worker-importScriptsOnError.html
http/tests/security/contentSecurityPolicy/worker-csp-importScripts-redirect-cross-origin-allowed.html
Comment 3 Build Bot 2016-08-24 02:08:30 PDT
Created attachment 286845 [details]
Archive of layout-test-results from ews101 for mac-yosemite

The attached test failures were seen while running run-webkit-tests on the mac-ews.
Bot: ews101  Port: mac-yosemite  Platform: Mac OS X 10.10.5
Comment 4 youenn fablet 2016-08-24 06:12:39 PDT
Created attachment 286849 [details]
Adding ThreadableLoader option
Comment 5 youenn fablet 2016-08-27 13:18:54 PDT
Created attachment 287209 [details]
Patch for landing (rebasing after 161194)
Comment 6 WebKit Commit Bot 2016-08-27 13:49:23 PDT
Comment on attachment 287209 [details]
Patch for landing (rebasing after 161194)

Clearing flags on attachment: 287209

Committed r205082: <http://trac.webkit.org/changeset/205082>
Comment 7 WebKit Commit Bot 2016-08-27 13:49:29 PDT
All reviewed patches have been landed.  Closing bug.