[Fetch API] Opaque responses should not have any body https://bugs.webkit.org/show_bug.cgi?id=161130

Patch by Youenn Fablet <youenn@apple.com> on 2016-08-27
Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/cors/cors-basic.js:
(cors): Adding response body checking.

Source/WebCore:

Covered by updated test.

Added a new ThreadableLoader option to receive or not opaque response body.
By default, option is set to Receive.
FetchLoader is setting it to DoNotReceive.

* Modules/fetch/FetchLoader.cpp:
(WebCore::FetchLoader::start):
* loader/DocumentThreadableLoader.cpp:
(WebCore::DocumentThreadableLoader::didReceiveResponse): Calling didFinishLoading just after didReceiveResponse in case of Opaque responses.
* loader/ThreadableLoader.cpp:
(WebCore::ThreadableLoaderOptions::ThreadableLoaderOptions):
* loader/ThreadableLoader.h:
* loader/WorkerThreadableLoader.cpp:
(WebCore::LoaderTaskOptions::LoaderTaskOptions):

Canonical link: https://commits.webkit.org/179456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205082 268f45cc-cd09-0410-ab3c-d52691b4dbfc