Source/WebCore/Modules/fetch/FetchLoader.cpp
@@ -76,7 +76,8 @@ void FetchLoader::start(ScriptExecutionContext& context, const FetchRequest& req
 {
     ThreadableLoaderOptions options(request.fetchOptions(), ConsiderPreflight,
         context.shouldBypassMainWorldContentSecurityPolicy() ? ContentSecurityPolicyEnforcement::DoNotEnforce : ContentSecurityPolicyEnforcement::EnforceConnectSrcDirective,
-        String(cachedResourceRequestInitiators().fetch));
+        String(cachedResourceRequestInitiators().fetch),
+        OpaqueResponseBodyPolicy::DoNotReceive);
     options.sendLoadCallbacks = SendCallbacks;
     options.dataBufferingPolicy = DoNotBufferData;
 
